# unimrcpcus

./: .gitignore  CMakeLists.txt  README.md  build_cus.sh  build_unimrcp.sh  configure.ac  unimrcp.sln
conf/: Makefile.am  logger.xml  unimrcpserver.xml
data/: Makefile.am  speaktmp.xml
libs/apr-toolkit/: aprtoolkit.vcxproj  aprtoolkit.vcxproj.filters
libs/mpf/: mpf.vcxproj  mpf.vcxproj.filters
libs/mrcp/: mrcp.vcxproj  mrcp.vcxproj.filters
libs/mrcp-client/: mrcpclient.vcxproj  mrcpclient.vcxproj.filters
libs/mrcp-engine/: mrcpengine.vcxproj  mrcpengine.vcxproj.filters
libs/mrcp-server/: mrcpserver.vcxproj  mrcpserver.vcxproj.filters
libs/mrcp-signaling/: mrcpsignaling.vcxproj  mrcpsignaling.vcxproj.filters
libs/mrcpv2-transport/: mrcpv2transport.vcxproj  mrcpv2transport.vcxproj.filters
libs/uni-rtsp/: unirtsp.vcxproj  unirtsp.vcxproj.filters
modules/mrcp-sofiasip/: mrcpsofiasip.vcxproj  mrcpsofiasip.vcxproj.filters
modules/mrcp-unirtsp/: mrcpunirtsp.vcxproj  mrcpunirtsp.vcxproj.filters
plugins/: Makefile.am
plugins/demo-recog/: demorecog.vcxproj  demorecog.vcxproj.filters
plugins/demo-synth/: demosynth.vcxproj  demosynth.vcxproj.filters
plugins/demo-verifier/: demoverifier.vcxproj  demoverifier.vcxproj.filters
plugins/mrcp-recorder/: mrcprecorder.vcxproj  mrcprecorder.vcxproj.filters
plugins/uasr-recog/: CMakeLists.txt  Makefile.am  uasrrecog.vcproj  uasrrecog.vcxproj  uasrrecog.vcxproj.filters
plugins/uasr-recog/conf/: uasrrecog.xml
plugins/uasr-recog/src/: uasr_recog_engine.cpp
plugins/utts-synth/: CMakeLists.txt  Makefile.am  uttssynth.vcproj  uttssynth.vcxproj  uttssynth.vcxproj.filters
plugins/utts-synth/conf/: uttssynth.xml
plugins/utts-synth/src/: utts_synth_engine.cpp
tests/apttest/: apttest.vcxproj
tests/mpftest/: mpftest.vcxproj
tests/mrcptest/: mrcptest.vcxproj
tests/rtsptest/: rtsptest.vcxproj
tests/strtablegen/: strtablegen.vcxproj
