MAINTAINERCLEANFILES   = Makefile.in

SUBDIRS                =

if UTTSSYNTH_PLUGIN
SUBDIRS               += utts-synth
endif

if UASRRECOG_PLUGIN
SUBDIRS               += uasr-recog
endif

if DEMOSYNTH_PLUGIN
SUBDIRS               += demo-synth
endif

if DEMORECOG_PLUGIN
SUBDIRS               += demo-recog
endif

if DEMOVERIFIER_PLUGIN
SUBDIRS               += demo-verifier
endif

if RECORDER_PLUGIN
SUBDIRS               += mrcp-recorder
endif
